--- a/src/Blender.css
+++ b/src/Blender.css
@@ -1,3 +1,6 @@
+*{
+  scroll-behavior: smooth;
+}
 body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: #ddd;
@@ -9,6 +12,22 @@ h1 {
 p{
   text-align: justify;
   color: #333;
+}
+
+.links{
+  text-align: center;
+}
+
+.links div{
+  padding: 10px;
+  border-radius: 10px;
+  display: inline-block;
+  background-color: blue;
+}
+
+.links a{
+  text-decoration: none;
+  color: rgb(255, 255, 255);
 }
 
 .imagesContainer {
@@ -142,6 +161,108 @@ p{
 
   h1 {
     font-size: 10vmin;
+  }
+
+}
+
+#vidDisplay{
+  max-width: 80%;
+  max-height: 80vmin;
+  box-sizing: border-box;
+}
+
+
+.vidSelect{
+  width: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  cursor: pointer;
+  padding: 10px;
+  border-radius: 10px;
+}
+.ThumbnailDisplay{
+  margin: 10px;
+  width: 100px;
+  height: 100px;
+  color: white;
+  background-color: rgb(0, 0, 0);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+}
+.vidDetails{
+  color: black;
+  transition: 0.5s;
+}
+.vidSelect:hover{
+  background-color: #225;
+}
+.vidSelect:hover .vidDetails{
+  color: white;
+}
+
+.vidDisplayContainer{
+  text-align: center;
+  padding: 10px;
+}
+
+.videosContainer {
+  display: grid;
+  grid-template-columns: auto;
+  place-items: center;
+}
+
+@media only screen and (min-width:800px) {
+
+  .videosContainer {
+    grid-template-columns: auto auto;
+  }
+
+}
+
+@media only screen and (min-width:1200px) {
+
+  .videosContainer {
+    grid-template-columns: auto auto auto;
+  }
+
+}
+
+@media only screen and (min-width:1600px) {
+
+  .videosContainer {
+    grid-template-columns: auto auto auto auto;
+  }
+
+}
+
+@media only screen and (min-width:2000px) {
+
+  .videosContainer {
+    grid-template-columns: auto auto auto auto auto;
+  }
+
+}
+
+@media only screen and (min-width:2400px) {
+
+  .videosContainer {
+    grid-template-columns: auto auto auto auto auto auto;
+  }
+
+}
+
+/* @media only screen and (min-width:2200px){
+
+  .videosContainer{grid-template-columns:auto auto auto auto auto auto auto;}
+
+} */
+@media only screen and (min-width:2800px) {
+
+  .videosContainer {
+    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
   }
 
 }
