--- a/src/Blender.css
+++ b/src/Blender.css
@@ -1,33 +1,116 @@
-*{
-  scroll-behavior: smooth;
+:root {
+  --scrollBehavior: smooth;
 }
+
+* {
+  scroll-behavior: var(--scrollBehavior);
+  transition: .2s;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #ddd;
+  background-color: #212223;
+  margin: 0;
+  max-width: 100vw;
+  height: 100vh;
+  transition: width 0s;
+  background-image: url("./Assets/DigitalMaze.jpg");
+  background-attachment: fixed;
+  background-size: 50%;
 }
 
+section {
+  background-attachment: fixed;
+  background-color: #2a2a2a;
+  min-height: 100vh;
+}
+
+.Introduction {
+  background: linear-gradient(to top, #D34D4D, rgba(0, 0, 0, 0.7));
+  min-height: 100vh;
+  max-width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+  color: #F0F0F0;
+  flex-direction: column;
+  transition: 0s;
+  margin: 0;
+  font-size: 125%;
+}
+.Introduction .logoImage{
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  display: inline;
+  background-image: url("./Assets/DoubleA.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.Introduction .logoImage:hover{
+  box-shadow: 0 0 5px white,
+              0 0 10px lightblue,
+              0 0 15px blue,
+              0 0 20px darkblue;
+}
 h1 {
   text-align: center;
-}
-p{
-  text-align: justify;
-  color: #333;
+  color: #F0F0F0;
+  margin: 0;
+  padding: 20px;
 }
 
-.links{
+section .links {
+  text-align: right;
+  padding: 20px;
+  background-color: black;
+}
+
+section .links a {
+  background-color: transparent;
+  box-shadow: none;
+}
+
+section .links a:hover {
+  background-color: #4A90E2;
+  box-shadow: none;
+  color: white;
+}
+
+.Introduction p {
+  text-align: justify;
+  text-align-last: center;
+  padding: 20px;
+}
+
+.links {
   text-align: center;
 }
 
-.links div{
-  padding: 10px;
-  border-radius: 10px;
-  display: inline-block;
-  background-color: blue;
+.links a:hover {
+  box-shadow: 0 0 5px white,
+              0 0 10px lightblue,
+              0 0 15px blue,
+              0 0 20px darkblue;
+  background-color: #c8e1ff;
+  color:#225;
 }
 
-.links a{
+.links a {
   text-decoration: none;
-  color: rgb(255, 255, 255);
+  margin: 10px;
+  background-color: #225;
+  /* Bright blue */
+  color: #ffffff;
+  /* White text */
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .imagesContainer {
@@ -60,7 +143,7 @@ p{
 
 }
 
-@media only screen and (min-width:1600px) {
+@media only screen and (min-width:1700px) {
 
   .imagesContainer {
     grid-template-columns: auto auto auto auto auto;
@@ -68,7 +151,7 @@ p{
 
 }
 
-@media only screen and (min-width:2000px) {
+@media only screen and (min-width:2100px) {
 
   .imagesContainer {
     grid-template-columns: auto auto auto auto auto auto;
@@ -76,36 +159,24 @@ p{
 
 }
 
-/* @media only screen and (min-width:2200px){
-
-  .imagesContainer{grid-template-columns:auto auto auto auto auto auto auto;}
-
-} */
-@media only screen and (min-width:2300px) {
+@media only screen and (min-width:2400px) {
 
   .imagesContainer {
-    grid-template-columns: auto auto auto auto auto auto auto auto auto auto;
+    grid-template-columns: auto auto auto auto auto auto auto;
   }
 
 }
 
-.image {
-  margin: 10px;
-  width: 300px;
-  height: 300px;
+@media only screen and (min-width:2800px) {
+
+  .imagesContainer {
+    grid-template-columns: auto auto auto auto auto auto auto auto auto;
+  }
+
 }
-.imageZoom{
-  position: fixed;
-  margin: 0;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding-right: 20px;
-  box-sizing: border-box;
-  z-index: 10000;
-}
-.image, .imageZoom {
+
+.image,
+.imageZoom {
   color: white;
   background-color: rgb(0, 0, 0);
   background-repeat: no-repeat;
@@ -116,6 +187,32 @@ p{
   align-items: flex-end;
   flex-direction: column;
   cursor: pointer;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.image {
+  margin: 10px;
+  width: 300px;
+  height: 300px;
+}
+
+.imageZoom {
+  position: fixed;
+  margin: 0;
+  top: 50vh;
+  left: 50vw;
+  width: 100vw;
+  height: 100vh;
+  transform: translate(-50%, -50%);
+  padding-right: 20px;
+  z-index: 10000;
+  transition: all 0.2s, transform 0s;
+}
+
+.image:hover {
+  border: 1px solid white;
+  border-radius: 10px;
 }
 
 .image:after,
@@ -138,18 +235,20 @@ p{
 
 }
 
-.image:before, .imageZoom:before {
+.image:before,
+.imageZoom:before {
   content: attr(data-name);
 }
 
-.image:after, .imageZoom:after {
+.image:after,
+.imageZoom:after {
   content: "Upload: " attr(data-time);
 }
 
 .image:hover:after,
 .image:hover:before,
 .imageZoom:hover:after,
-.imageZoom:hover:before{
+.imageZoom:hover:before {
   opacity: 1;
 }
 
@@ -165,24 +264,30 @@ p{
 
 }
 
-#vidDisplay{
+#vidTitle {
+  color: white;
+}
+
+#vidDisplay {
   max-width: 80%;
   max-height: 80vmin;
   box-sizing: border-box;
 }
 
 
-.vidSelect{
+.vidSelect {
   width: auto;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   align-items: center;
   flex-direction: row;
   cursor: pointer;
-  padding: 10px;
-  border-radius: 10px;
+  padding: 5px;
+  font-size: 90%;
+  box-sizing: border-box;
 }
-.ThumbnailDisplay{
+
+.ThumbnailDisplay {
   margin: 10px;
   width: 100px;
   height: 100px;
@@ -192,18 +297,21 @@ p{
   background-position: center;
   background-size: contain;
 }
-.vidDetails{
-  color: black;
-  transition: 0.5s;
-}
-.vidSelect:hover{
-  background-color: #225;
-}
-.vidSelect:hover .vidDetails{
-  color: white;
+
+.vidDetails {
+  color: rgb(255, 255, 255);
 }
 
-.vidDisplayContainer{
+.vidSelect:hover {
+  border: 1px solid white;
+  border-radius: 5px;
+}
+
+.vidSelect:hover b {
+  color: rgb(220, 212, 255);
+}
+
+.vidDisplayContainer {
   text-align: center;
   padding: 10px;
 }
@@ -214,7 +322,7 @@ p{
   place-items: center;
 }
 
-@media only screen and (min-width:800px) {
+@media only screen and (min-width:820px) {
 
   .videosContainer {
     grid-template-columns: auto auto;
@@ -222,7 +330,7 @@ p{
 
 }
 
-@media only screen and (min-width:1200px) {
+@media only screen and (min-width:1240px) {
 
   .videosContainer {
     grid-template-columns: auto auto auto;
@@ -230,7 +338,7 @@ p{
 
 }
 
-@media only screen and (min-width:1600px) {
+@media only screen and (min-width:1660px) {
 
   .videosContainer {
     grid-template-columns: auto auto auto auto;
@@ -238,7 +346,7 @@ p{
 
 }
 
-@media only screen and (min-width:2000px) {
+@media only screen and (min-width:2080px) {
 
   .videosContainer {
     grid-template-columns: auto auto auto auto auto;
@@ -246,7 +354,7 @@ p{
 
 }
 
-@media only screen and (min-width:2400px) {
+@media only screen and (min-width:2500px) {
 
   .videosContainer {
     grid-template-columns: auto auto auto auto auto auto;
@@ -254,11 +362,6 @@ p{
 
 }
 
-/* @media only screen and (min-width:2200px){
-
-  .videosContainer{grid-template-columns:auto auto auto auto auto auto auto;}
-
-} */
 @media only screen and (min-width:2800px) {
 
   .videosContainer {
