--- a/src/Blender.css
+++ b/src/Blender.css
@@ -14,7 +14,7 @@ body {
   max-width: 100vw;
   height: 100vh;
   transition: width 0s;
-  background-image: url("./Assets/DigitalMaze.jpg");
+  background-image: url("../Assets/DigitalMaze.jpg");
   background-attachment: fixed;
   background-size: 50%;
 }
@@ -46,7 +46,7 @@ section {
   height: 100px;
   border-radius: 50%;
   display: inline;
-  background-image: url("./Assets/DoubleA.jpg");
+  background-image: url("../Assets/DoubleA.jpg");
   background-size: cover;
   background-position: center;
 }
