--- a/src/Blender.css
+++ b/src/Blender.css
@@ -5,6 +5,7 @@
 * {
   scroll-behavior: var(--scrollBehavior);
   transition: .2s;
+  -webkit-tap-highlight-color: transparent;
 }
 
 body {
@@ -46,11 +47,10 @@ section {
   height: 100px;
   border-radius: 50%;
   display: inline;
+  background-color: black;
   background-image: url("../Assets/DoubleA.jpg");
   background-size: cover;
   background-position: center;
-}
-.Introduction .logoImage:hover{
   box-shadow: 0 0 5px white,
               0 0 10px lightblue,
               0 0 15px blue,
