--- a/src/Blender.css
+++ b/src/Blender.css
@@ -42,7 +42,8 @@ section {
   margin: 0;
   font-size: 125%;
 }
-.Introduction .logoImage{
+
+.Introduction .logoImage {
   width: 100px;
   height: 100px;
   border-radius: 50%;
@@ -52,11 +53,13 @@ section {
   background-size: cover;
   background-position: center;
   box-shadow: 0 0 5px white,
-              0 0 10px lightblue,
-              0 0 15px blue,
-              0 0 20px darkblue;
+    0 0 10px lightblue,
+    0 0 15px blue,
+    0 0 20px darkblue;
 }
-h1, h3 {
+
+h1,
+h3 {
   text-align: center;
   color: #F0F0F0;
   margin: 0;
@@ -90,16 +93,18 @@ section .links a:hover {
   text-align: center;
 }
 
-.links a:hover, #HUBlink:hover {
+.links a:hover,
+#HUBlink:hover {
   box-shadow: 0 0 5px white,
-              0 0 10px lightblue,
-              0 0 15px blue,
-              0 0 20px darkblue;
+    0 0 10px lightblue,
+    0 0 15px blue,
+    0 0 20px darkblue;
   background-color: #c8e1ff;
-  color:#225;
+  color: #225;
 }
 
-.links a, #HUBlink {
+.links a,
+#HUBlink {
   text-decoration: none;
   margin: 10px;
   background-color: #225;
@@ -314,6 +319,24 @@ section .links a:hover {
 .vidDisplayContainer {
   text-align: center;
   padding: 10px;
+}
+
+.vidDisplayContainer button {
+  background-color: rgba(0, 0, 0, 0.3);
+  color: #F0F0F0;
+  padding: 5px;
+  margin: 10px;
+  border: none;
+  border-radius: 10px;
+  font-size: 120%;
+  /* font-weight: lighter; */
+  border: 1px solid white;
+  font-family: Arial, Helvetica, sans-serif;
+  text-decoration: none;
+  cursor: pointer;
+}
+.vidDisplayContainer button:hover{
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .videosContainer {
