--- a/src/Blender.css
+++ b/src/Blender.css
@@ -9,13 +9,13 @@
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: #212223;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #0d0d0d;
   margin: 0;
   max-width: 100vw;
   height: 100vh;
   transition: width 0s;
-  background-image: url("../Assets/DigitalMaze2.jpg");
+  /* background-image: url("../Assets/DigitalMaze2.jpg"); */
   background-attachment: fixed;
   /* background-size: 50%; */
 }
@@ -27,35 +27,91 @@ section {
 }
 
 .Introduction {
-  background: linear-gradient(to top, #D34D4D, rgba(0, 0, 0, 0.7));
+  /* background: linear-gradient(to top, #0b0d1f, rgba(0, 0, 0, 0.858)); */
   min-height: 100vh;
-  max-width: 100vw;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  padding: 20px;
-  box-sizing: border-box;
-  color: #F0F0F0;
-  flex-direction: column;
-  transition: 0s;
+  max-width: 1000px;
+  margin: 0 auto;
+  padding: 0 2rem;
+  color: white;
+  display: grid;
+  grid-template-areas: 
+    'title links'
+    'logo intro'
+    /* 'links links' */
+    'home home'
+  ;
+  gap: 2rem;
+  place-items: center;
+  grid-template-rows: 60px auto 60px;
+}
+
+.Introduction h1{
+  grid-area: title;
+  padding: 0;
   margin: 0;
-  font-size: 125%;
+  font-size: 1rem;
 }
 
 .Introduction .logoImage {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  display: inline;
+  grid-area: logo;
+  width: 100%;
+  height: 100%;
+  /* border-radius: 50%; */
+  display: inline-block;
   background-color: black;
   background-image: url("../Assets/DoubleA.jpg");
   background-size: cover;
   background-position: center;
-  box-shadow: 0 0 5px white,
-    0 0 10px lightblue,
-    0 0 15px blue,
-    0 0 20px darkblue;
+  border-left: 5px solid rgb(255, 0, 0);
+  border-right: 5px solid rgb(255, 0, 0);
+  border-top: 5px solid transparent;
+  border-bottom: 5px solid transparent;
+  background-clip: content-box;
+}
+
+.Introduction p {
+  grid-area: intro;
+  text-align: justify;
+  max-width: 500px;
+  /* text-align-last: center; */
+}
+.Introduction .links{
+  grid-area: links;
+  display: flex;
+  align-items: center;
+  justify-content: flex-end;
+  width: 100%;
+  gap: 2rem;
+}
+.Introduction a {
+  display: inline-block;
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  position: relative;
+}
+
+.Introduction a:after {
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  background-color: white;
+  content: "";
+  bottom: 0;
+  left: 0;
+  transform: scaleX(0);
+  transition: transform .25s;
+}
+
+.Introduction a:hover:after {
+  transform: scaleX(1);
+  box-shadow: 0 0 2px white,
+      0 0 3px lightblue,
+      0 0 4px blue,
+      0 0 5px darkblue;
+}
+
+.Introduction span{
+  grid-area: home;
 }
 
 h1,
@@ -75,47 +131,15 @@ section .links {
 section .links a {
   background-color: transparent;
   box-shadow: none;
+  color: #F0F0F0;
+  padding: 5px;
+  border-radius: 2px;
 }
 
 section .links a:hover {
   background-color: #4A90E2;
   box-shadow: none;
   color: white;
-}
-
-.Introduction p {
-  text-align: justify;
-  text-align-last: center;
-  padding: 20px;
-}
-
-.links {
-  text-align: center;
-}
-
-.links a:hover,
-#HUBlink:hover {
-  box-shadow: 0 0 5px white,
-    0 0 10px lightblue,
-    0 0 15px blue,
-    0 0 20px darkblue;
-  background-color: #c8e1ff;
-  color: #225;
-}
-
-.links a,
-#HUBlink {
-  text-decoration: none;
-  margin: 10px;
-  background-color: #225;
-  /* Bright blue */
-  color: #ffffff;
-  /* White text */
-  padding: 10px 20px;
-  border: none;
-  border-radius: 5px;
-  font-size: 16px;
-  font-weight: bold;
 }
 
 .imagesContainer {
