--- a/src/Blender.css
+++ b/src/Blender.css
@@ -252,7 +252,13 @@ section .links a:hover {
 .image {
   margin: 10px;
   width: 300px;
+  filter: brightness(.8);
   height: 300px;
+}
+.imagesContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .imageZoom {
@@ -270,8 +276,8 @@ section .links a:hover {
 }
 
 .image:hover {
-  border: 1px solid white;
-  border-radius: 10px;
+  border-radius: 5px;
+  filter: brightness(1);
 }
 
 .image:after,
