--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,4 @@
-main {
+.home {
     max-width: 1000px;
     margin: 0 auto;
 }
@@ -41,46 +41,6 @@ main {
     text-align: justify;
     max-width: 500px;
     /* text-align-last: center; */
-}
-
-.links {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    max-width: 1000px;
-    margin: 0 auto;
-    height: 60px;
-    gap: 1rem;
-    padding-right: 1rem;
-    box-sizing: border-box;
-}
-
-a {
-    display: inline-block;
-    color: rgb(255, 255, 255);
-    text-decoration: none;
-    position: relative;
-}
-
-a:after {
-    position: absolute;
-    width: 100%;
-    height: 1px;
-    background-color: white;
-    content: "";
-    bottom: 0;
-    left: 0;
-    transform: scaleX(0);
-    transition: transform .25s;
-}
-
-a:hover:after {
-    transform: scaleX(1);
-    box-shadow: 0 0 2px white,
-        0 0 3px lightblue,
-        0 0 4px blue,
-        0 0 5px darkblue;
 }
 
 .Introduction span {
