--- a/src/Blender.css
+++ b/src/Blender.css
@@ -21,7 +21,17 @@
   background-color: black;
   background-attachment: fixed;
   border-radius: inherit;
-  transition: background .5s;
+  position: relative;
+}
+.vidSelect:after {
+  background-image: radial-gradient(300px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.267), transparent 50%);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+  top: 0;
+  left: 0;
+  content: "";
 }
 
 .ThumbnailDisplay {
@@ -39,9 +49,6 @@
   color: rgb(255, 255, 255);
 }
 
-.vidSelect:hover {
-  background-image: radial-gradient(300px circle at var(--mouse-x) var(--mouse-y), rgba(255, 255, 255, 0.267), transparent 50%);
-}
 .video-border{
   padding: 1px;
   border-radius: 1px;
@@ -81,7 +88,7 @@
 
 .videosContainer {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 1rem;
   max-width: 1400px;
   margin: 0 auto;
