--- a/src/index.css
+++ b/src/index.css
@@ -89,4 +89,38 @@ a:hover:after {
 main{
     max-width: 100%;
     overflow-x: hidden;
+    --size: 100px;
+}
+
+main:before{
+    content: "";
+    width: var(--size);
+    height: var(--size);
+    background-image: linear-gradient(to right, rgb(0, 145, 255), rgb(0, 60, 128));
+    border-radius: 50%;
+    transform: translate(-50%, -50%);
+    z-index: -3;
+    position: fixed;
+    top: var(--mouse-y);
+    left: var(--mouse-x);
+    animation: spin 5s linear infinite;
+    opacity: .7;
+}
+main:after{
+    content: "";
+    width: 100vw;
+    height: 100vh;
+    z-index: -2;
+    position: fixed;
+    top: 0;
+    left: 0;
+    backdrop-filter: blur(var(--size));
+}
+@keyframes spin {
+    50%{
+        scale: 1.2 1;
+    }
+    to{
+        transform: translate(-50%, -50%) rotate(360deg);
+    }
 }
