--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+
 :root {
     --scrollBehavior: smooth;
     --mouse-x: -500px;
@@ -9,10 +11,11 @@
     -webkit-tap-highlight-color: transparent;
     margin: 0;
     padding: 0;
+    font-family: "Raleway", 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-optical-sizing: auto;
 }
 
 body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #000000;
     background: linear-gradient(to top, #0b0d1f, rgb(0, 0, 0));
     color: #F0F0F0;
@@ -48,7 +51,8 @@ h3 {
     box-sizing: border-box;
     position: relative;
 }
-.links:hover:after{
+
+.links:hover:after {
     position: absolute;
     width: 100%;
     height: 1px;
@@ -76,27 +80,28 @@ a:after {
     left: 0;
     transform: scaleX(0);
     transition: transform .25s;
+    transform-origin: 0 0;
 }
 
 a:hover:after {
     transform: scaleX(1);
-    box-shadow: 0 0 2px white,
+    /* box-shadow: 0 0 2px white,
         0 0 3px lightblue,
         0 0 4px blue,
-        0 0 5px darkblue;
+        0 0 5px darkblue; */
 }
 
-main{
+main {
     max-width: 100%;
     overflow-x: hidden;
     --size: 100px;
 }
 
-main:before{
+main:before {
     content: "";
     width: var(--size);
     height: var(--size);
-    background-image: linear-gradient(to right, rgb(0, 145, 255), rgb(0, 60, 128));
+    background-image: linear-gradient(to right, rgb(0, 145, 255), rgb(0, 128, 45));
     border-radius: 50%;
     transform: translate(-50%, -50%);
     z-index: -3;
@@ -104,9 +109,10 @@ main:before{
     top: var(--mouse-y);
     left: var(--mouse-x);
     animation: spin 5s linear infinite;
-    opacity: .7;
+    opacity: .9;
 }
-main:after{
+
+main:after {
     content: "";
     width: 100vw;
     height: 100vh;
@@ -114,13 +120,15 @@ main:after{
     position: fixed;
     top: 0;
     left: 0;
-    backdrop-filter: blur(var(--size));
+    backdrop-filter: blur(calc(var(--size)/1.5));
 }
+
 @keyframes spin {
-    50%{
-        scale: 1.2 1;
+    50% {
+        scale: 1.5 1;
     }
-    to{
+
+    to {
         transform: translate(-50%, -50%) rotate(360deg);
     }
 }
