--- a/src/Home.css
+++ b/src/Home.css
@@ -34,6 +34,17 @@
     justify-content: center;
     align-items: center;
     max-width: 40vw;
+    position: relative;
+}
+
+.logoImage iframe{
+    position: absolute;
+    top: 0;
+    left: 0;
+    border: none;
+    width: 100%;
+    height: 100%;
+    box-sizing: border-box;
 }
 
 .Introduction p {
