--- a/src/Images.css
+++ b/src/Images.css
@@ -21,6 +21,7 @@
     cursor: pointer;
     box-sizing: border-box;
     padding: 10px;
+    background-image: url("../Assets/Loader.svg");
 }
 
 .image {
@@ -31,12 +32,9 @@
 }
 
 .imagesContainer:has(.image:hover) .image{
-    filter: brightness(.4) saturate(0.6) contrast(1.2);
+    filter: brightness(.7) saturate(0.6) contrast(1.2);
 }
-.imagesContainer:has(.image:hover) .image:hover{
-    filter: brightness(1) saturate(1);
-}
-.image:hover {
+.imagesContainer:has(.image:hover) .image:hover, .image:hover{
     filter: brightness(1) saturate(1);
 }
 
