Changes to video section

--- a/src/Blender.css
+++ b/src/Blender.css
@@ -93,7 +93,7 @@
   text-align: center;
   padding: 10px;
   max-width: 1600px;
-  /* margin: 0 auto; */
+  margin: 0 auto;
 }
 
 .vidDisplayContainer h5, .vidDisplayContainer h6{
