--- a/src/index.css
+++ b/src/index.css
@@ -42,6 +42,7 @@ h3 {
     display: flex;
     align-items: center;
     justify-content: flex-end;
+    flex-wrap: wrap;
     width: 100%;
     max-width: 1000px;
     margin: 0 auto;
