--- a/src/Home.css
+++ b/src/Home.css
@@ -37,7 +37,7 @@
     position: relative;
 }
 
-.logoImage iframe{
+.logoImage iframe {
     position: absolute;
     top: 0;
     left: 0;
@@ -58,16 +58,131 @@
     grid-area: home;
 }
 
-@media screen and (max-width: 600px) {
+.home-articles-container {
+    /* background-image: url("../Assets/Arrow.svg"); */
+    background-attachment: fixed;
+    /* background-size: contain; */
+    /* background-position: 50% 0%; */
+    background-repeat: no-repeat;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2vmin;
+    padding: 2vmin;
+    background-image: url("../Assets/Arrow left.svg");
+    padding-left: calc(2vmin + 20px);
+    background-position: 0 0;
+    background-size: 300px 100vh;
+}
+
+.home-articles-container article {
+    background-image: linear-gradient(to top, #26262a, rgb(255, 255, 255) 50%);
+    background-attachment: fixed;
+    background-size: 100vw 100vh;
+    background-clip: text;
+}
+
+.home-articles-media-container {
+    padding: 1px;
+    border-radius: 2vmin;
+    background-image: radial-gradient(400px circle at var(--mouse-x) var(--mouse-y), rgb(255, 255, 255), transparent 50%);
+    background-attachment: fixed;
+    background-size: 100vw 100vh;
+    overflow: hidden;
+    position: relative;
+}
+
+.home-articles-media-container * {
+    width: 100%;
+    border-radius: inherit;
+    box-sizing: border-box;
+    display: block;
+    background-color: black;
+}
+
+.home-articles-media-container:has(video) {
+    cursor: pointer;
+}
+
+.home-articles-media-container:has(video:not(.playing)):after {
+    content: "";
+    display: block;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 0;
+    height: 0;
+    border-left: min(17vmin, 85px) solid white;
+    border-top: min(10vmin, 50px) solid transparent;
+    border-bottom: min(10vmin, 50px) solid transparent;
+    pointer-events: none;
+}
+
+.home-articles-container article h2 {
+    text-align: left;
+    color: transparent;
+    margin: 1vmin;
+}
+
+
+.home-articles-container article p {
+    text-align: justify;
+    padding: 5vmin;
+}
+
+.home-articles-container article a {
+    color: rgb(157, 179, 227);
+}
+
+.two-column {
+    grid-column: span 2 / span 2;
+}
+
+@media screen and (max-width: 1024px) {
+    .Introduction {
+        min-height: 90vh;
+    }
+}
+
+
+.mainVideo{
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 1vmin;
+}
+
+.mainVideo video{
+    max-height: 80vh;
+    max-width: 90%;
+    display: block;
+    aspect-ratio: 16/9;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+@media screen and (max-width: 800px) {
     .Introduction {
         display: flex;
         flex-direction: column;
         gap: 1rem;
         padding: 10px;
+        justify-content: center;
     }
+
 
     .Introduction .links {
         text-align: center;
         justify-content: center;
+    }
+
+    .home-articles-container {
+        grid-template-columns: auto;
+    }
+
+    .two-column {
+        grid-column: span 1 / span 1;
     }
 }
