--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
 
 :root {
-    --scrollBehavior: smooth;
+    --scrollBehavior: auto;
     --mouse-x: -500px;
     --mouse-y: -500px
 }
