--- a/src/index.css
+++ b/src/index.css
@@ -15,13 +15,21 @@
     font-optical-sizing: auto;
 }
 
+html,
 body {
-    background-color: #000000;
+    background: #26262a;
+    margin: 0;
+    min-height: 100%;
+    overscroll-behavior: none;
+}
+
+body {
+    background-color: #26262a;
     background: linear-gradient(to top, #26262a, rgb(0, 0, 0));
     color: #F0F0F0;
     margin: 0;
     max-width: 100vw;
-    height: 100vh;
+    background-size: cover;
     background-attachment: fixed;
 }
 
@@ -99,7 +107,7 @@ main {
     --size: 100px;
 }
 
-.MouseAvailable:before {
+/* .MouseAvailable:before {
     content: "";
     width: var(--size);
     height: var(--size);
@@ -124,7 +132,7 @@ main {
     top: 0;
     left: 0;
     backdrop-filter: blur(calc(var(--size)/1.5));
-}
+} */
 
 main:has(iframe:hover):before {
     opacity: 0;
